ExtractJob: set destination URL in the job description

The plasma notification applet looks for it for the "Open" button within
the notification. If it doesn't find it, it falls back to the archive
URL which is not what one would expect.

BUG: 385043
FIXED-IN: 17.11.90

Differential Revision: D8861